🐛 Fix: single line code overflow

--- a/src/styles/_plugins/inside-md.less
+++ b/src/styles/_plugins/inside-md.less
@@ -367,7 +367,7 @@ ol > li > ol > li > ol > li {
 
 .md-content pre {
   position: relative;
-  padding: 0;
+  //padding: 0;
   line-height: 1.45;
   background: #21252b;
   border: 0;
